# async-openai

./: .gitignore
async-openai/: Cargo.toml
async-openai/src/: lib.rs  structured.rs
async-openai/src/types/: chat.rs  mod.rs  structured.rs
examples/structured_output/: Cargo.toml  main.rs
