[package]
name = "async-openai"
version = "0.28.0"
authors = ["Himanshu Neema"]
categories = ["api-bindings", "web-programming", "asynchronous"]
keywords = ["openai", "async", "openapi", "ai"]
description = "Rust library for OpenAI"
edition = "2021"
rust-version = { workspace = true }
license = "MIT"
readme = "README.md"
homepage = "https://github.com/64bit/async-openai"
repository = "https://github.com/64bit/async-openai"

[features]
default = ["rustls"]
# Enable rustls for TLS support
rustls = ["reqwest/rustls-tls-native-roots"]
# Enable rustls and webpki-roots
rustls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
# Enable native-tls for TLS support
native-tls = ["reqwest/native-tls"]
# Remove dependency on OpenSSL
native-tls-vendored = ["reqwest/native-tls-vendored"]
realtime = ["dep:tokio-tungstenite"]
# Bring your own types
byot = []
# Enable YAML support for structured output
yaml = ["dep:serde_yaml"]
# Enable XML support for structured output
xml = ["dep:quick-xml"]
# Keep feature flag for backward compatibility (empty feature)
schema-validation = []

[dependencies]
anyhow = "1.0"  # Now a regular dependency
async-openai-macros = { path = "../async-openai-macros", version = "0.1.0" }
backoff = { version = "0.4.0", features = ["tokio"] }
base64 = "0.22.1"
futures = "0.3.31"
# Added: schema-validation dependencies are now non-optional
jsonschema = "0.18.1"
schemars = "0.8.16"
url = "2.5.0"
rand = "0.8.5"
reqwest = { version = "0.12.12", features = [
  "json",
  "stream",
  "multipart",
], default-features = false }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["fs", "macros"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.13", features = ["codec", "io-util"] }
tracing = "0.1.41"
derive_builder = "0.20.2"
secrecy = { version = "0.10.3", features = ["serde"] }
bytes = "1.9.0"
eventsource-stream = "0.2.3"
tokio-tungstenite = { version = "0.26.1", optional = true, default-features = false }
regex = "1.10.5"
serde_yaml = { version = "0.9.33", optional = true }
quick-xml = { version = "0.31.0", features = ["serialize"], optional = true }
indexmap = { version = "2.2.6", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4.4"
serde_json = "1.0"

[[test]]
name = "bring-your-own-type"
required-features = ["byot"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
