[package]
name = "structured_output_example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "structured_output"
path = "main.rs"

[dependencies]
async-openai = { path = "../../async-openai", features = ["schema-validation"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
dotenv = "0.15" 
futures = "0.3.31"